--- a/about.html
+++ b/about.html
@@ -135,7 +135,8 @@
                         <div class="about__text__desc"> 
                             <p>Soy Camila Andrea Campo Herrera, estudiante de ingeniería Multimedia con habilidades creativas como Game desing, Diseño de personajes, Generalista 3d, escritora de guiones.
                                  Soy una persona muy ágil, responsable y proactiva que deja que su imaginación salga volar con ideas únicas, me encantan los retos,
-                                  mientras más difícil sea el proyecto con mayor pasión lo realizo. </p>
+                                  mientras más difícil sea el proyecto con mayor pasión lo realizo, en mis tiempos libres me dedico a mi hobby que es el cosplay,
+                                   afotunadamente va muy de la mano con mi carrera puesto me tomo la libertad de la creacion de props gracias a mi habilidad con el modelado 3D. </p>
                         </div>
                     </div>
                 </div>
@@ -168,7 +169,7 @@
                         <div class="footer__option__item">
                             <h5>Sobre Mi</h5>
                             <p>Soy Camila Campo, Estudiante de ING.multimedia en la Universidad de San Buenaventura</p>
-                            <a href="http://127.0.0.1:5500/videograph-master/about.html" class="read__more">Leer mas. <span class="arrow_right"></span></a>
+                            
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
