--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="footer__option__item">
                             <h5>Sobre Mi</h5>
                             <p>Soy Camila Campo, Estudiante de ING.multimedia en la Universidad de San Buenaventura</p>
-                            <a href="http://127.0.0.1:5500/videograph-master/about.html" class="read__more">Leer mas. <span class="arrow_right"></span></a>
+                            <a href="http://127.0.0.1:5500/videograph-master/about.html" class="read__more"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
