--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
                 data-setbg="img/portfolio/art.png">
               </div>
               <div class="portfolio__item__text">
-                <a id="link" href=https://www.artstation.com/artwork/eJNOE6 target="_blank">Artstation</a>
+                <a id="link" href=https://www.artstation.com/rouge_kam target="_blank">Artstation</a>
                 <ul>
                   <li>En este lugar podras ver mis modelos 3D junto a sus procesos.</li>                 
                 </ul>
@@ -140,7 +140,7 @@
           
             </div>
               <div class="portfolio__item__text">
-                <a id="link" href=https://sketchfab.com/RougeKam target="_blank">sketchfab</a>
+                <a id="link" href=https://sketchfab.com/CamilaCampo target="_blank">sketchfab</a>
                 <span>En este lugar puedes encontrar netamente modelado 3D</span>
                   
                 </ul>
